[workspace]
resolver = "2"
# members sorted by publishing order to `crates.io`
members = [
    "ibc",
    "ibc-apps",
    "ibc-apps/ics20-transfer",
    "ibc-apps/ics20-transfer/types",
    "ibc-apps/ics721-nft-transfer",
    "ibc-apps/ics721-nft-transfer/types",
    "ibc-clients",
    "ibc-clients/ics07-tendermint",
    "ibc-clients/ics07-tendermint/types",
    "ibc-clients/ics08-wasm/types",
    "ibc-core",
    "ibc-core/ics02-client",
    "ibc-core/ics02-client/context",
    "ibc-core/ics02-client/types",
    "ibc-core/ics03-connection",
    "ibc-core/ics03-connection/types",
    "ibc-core/ics04-channel",
    "ibc-core/ics04-channel/types",
    "ibc-core/ics23-commitment/types",
    "ibc-core/ics24-host",
    "ibc-core/ics24-host/cosmos",
    "ibc-core/ics24-host/types",
    "ibc-core/ics25-handler",
    "ibc-core/ics25-handler/types",
    "ibc-core/ics26-routing",
    "ibc-core/ics26-routing/types",
    "ibc-data-types",
    "ibc-derive",
    "ibc-primitives",
    "ibc-query",
    "ibc-testkit",
    # internal crates that are not published
    "tests-integration",
]

exclude = ["ci/cw-check", "ci/no-std-check"]

[workspace.package]
version      = "0.57.0"
license      = "Apache-2.0"
edition      = "2024"
rust-version = "1.88.0"
readme       = "README.md"
repository   = "https://github.com/cosmos/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]

[workspace.dependencies]
# external dependencies
arbitrary       = { version = "1.4", features = ["derive"] }
base64          = { version = "0.22", default-features = false }

basecoin-store = { path = "../basecoin-rs/basecoin/store" }
borsh           = { version = "1", default-features = false, features = ["derive"] }
derive_more     = { version = "1.0.0", default-features = false, features = ["from", "into", "display", "try_into"] }
displaydoc      = { version = "0.2.5", default-features = false }
hex             = { version = "0.4.3", default-features = false }

# ibc dependencies
ibc = { path = "ibc" }
ibc-app-nft-transfer = { version = "0.57.0", path = "./ibc-apps/ics721-nft-transfer", default-features = false }
ibc-app-nft-transfer-types  = { version = "0.57.0", path = "./ibc-apps/ics721-nft-transfer/types", default-features = false }

ibc-app-transfer     = { version = "0.57.0", path = "./ibc-apps/ics20-transfer", default-features = false }
ibc-app-transfer-types = { path = "ibc-apps/ics20-transfer/types" }
ibc-apps       = { version = "0.57.0", path = "./ibc-apps", default-features = false }

ibc-client-tendermint = { version = "0.57.0", path = "./ibc-clients/ics07-tendermint", default-features = false }
ibc-client-tendermint-types = { version = "0.57.0", path = "./ibc-clients/ics07-tendermint/types", default-features = false }
ibc-client-wasm-types       = { version = "0.57.0", path = "./ibc-clients/ics08-wasm/types", default-features = false }
ibc-clients    = { version = "0.57.0", path = "./ibc-clients", default-features = false }
ibc-core       = { version = "0.57.0", path = "./ibc-core", default-features = false }
ibc-core-channel = { path = "ibc-core/ics04-channel" }
ibc-core-channel-types = { path = "ibc-core/ics04-channel/types" }

ibc-core-client     = { version = "0.57.0", path = "./ibc-core/ics02-client", default-features = false }

ibc-core-client-context     = { version = "0.57.0", path = "./ibc-core/ics02-client/context", default-features = false }
ibc-core-client-types       = { version = "0.57.0", path = "./ibc-core/ics02-client/types", default-features = false }
ibc-core-commitment-types   = { version = "0.57.0", path = "./ibc-core/ics23-commitment/types", default-features = false }
ibc-core-connection = { version = "0.57.0", path = "./ibc-core/ics03-connection", default-features = false }
ibc-core-connection-types   = { version = "0.57.0", path = "./ibc-core/ics03-connection/types", default-features = false }
ibc-core-handler    = { version = "0.57.0", path = "./ibc-core/ics25-handler", default-features = false }
ibc-core-handler-types      = { version = "0.57.0", path = "./ibc-core/ics25-handler/types", default-features = false }
ibc-core-host       = { version = "0.57.0", path = "./ibc-core/ics24-host", default-features = false }
ibc-core-host-cosmos        = { version = "0.57.0", path = "./ibc-core/ics24-host/cosmos", default-features = false }
ibc-core-host-types = { path = "ibc-core/ics24-host/types" }
ibc-core-router = { path = "ibc-core/ics26-routing" }
ibc-core-router-types = { path = "ibc-core/ics26-routing/types" }

ibc-derive = { version = "0.10.1", path = "./ibc-derive" }
ibc-primitives = { path = "ibc-primitives" }

ibc-proto = { path = "../ibc-proto-rs" }
ibc-query = { path = "ibc-query" }
ibc-testkit = { path = "ibc-testkit" }

# parity dependencies
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
prost           = { version = "0.14", default-features = false }
rstest          = { version = "0.24" }
scale-info         = { version = "2.11.6", default-features = false }
schemars        = { version = "0.8.21" }
serde           = { version = "1.0", default-features = false }
serde-json      = { package = "serde-json-wasm", version = "1.0.1", default-features = false }
sha2            = { version = "0.10.8", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }

# cosmos dependencies
tendermint = { path = "../tendermint-rs/tendermint" }
tendermint-light-client = { path = "../tendermint-rs/light-client" }
tendermint-light-client-verifier = { path = "../tendermint-rs/light-client-verifier" }
tendermint-proto = { path = "../tendermint-rs/proto" }
tendermint-rpc = { path = "../tendermint-rs/rpc" }
tendermint-testgen = { path = "../tendermint-rs/testgen" }
ics23 = { path = "../ics23/rust" }

