[package]
name         = "ibc-derive"
version      = "0.10.1"
license      = { workspace = true }
repository   = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = "Maintained by `ibc-rs`, macros implementations of #[derive(ClientState)] and #[derive(ConsensusState)]"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote       = { version = "1" }
syn         = { version = "2" }
