[package]
name         = "ibc-query"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "cosmos", "ibc", "rpc", "grpc"]

description = """
    Maintained by `ibc-rs`, contains essential IBC query types, utility functions and
    gRPC service implementations for the IBC core.
"""

[features]
default = ["std"]
std = ["ibc/std", "ibc-proto/std"]
serde = ["dep:serde", "ibc/serde", "ibc-proto/serde"]
schema = ["dep:schemars", "ibc/schema", "ibc-proto/json-schema", "serde", "std"]

[dependencies]
# external dependencies
displaydoc = { workspace = true, default-features = false }

# ibc dependencies
ibc       = { workspace = true }
ibc-proto = { workspace = true, features = ["server"] }
schemars   = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
tonic      = { version = "0.14" }
