[package]
name     = "no-std-check"
version  = "0.1.0"
edition  = "2021"
resolver = "2"

[dependencies]
ibc = { git = "https://github.com/permissionlessweb/ibc-rs", branch = "zk-mvp", default-features = false, features = ["serde"] }
ibc-proto = { git = "https://github.com/permissionlessweb/ibc-proto-rs", branch = "zk-mvp", default-features = false, features = ["borsh", "parity-scale-codec", "serde"] }
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false }
tendermint-proto = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-light-client-verifier = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false, features = ["rust-crypto"] }

sp-core    = { version = "34.0", default-features = false, optional = true }
sp-io      = { version = "37.0", default-features = false, optional = true }
sp-runtime = { version = "38.0", default-features = false, optional = true }
sp-std     = { version = "14.0", default-features = false, optional = true }

# The indirect dependency `syn` 2.0.4 has a bug that causes
# compilation errors in `tendermint`. This is fixed in 2.0.5.
# See https://github.com/informalsystems/tendermint-rs/issues/1286
syn = ">=2.0.5"

[features]
panic-handler = [  ]
use-substrate = [ "sp-core", "sp-io", "sp-runtime", "sp-std" ]
substrate-std = [ "sp-core/std", "sp-io/std", "sp-runtime/std", "sp-std/std" ]
